# BOA-Contrast

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENCE  README.md  pyproject.toml  requirements.txt
.github/workflows/: checks.yml  mypy-flake-test.yml  publish.yml  python-publish.yml  test.yml
boa_contrast/: __init__.py  __main__.py  cli.py  commands.py
boa_contrast/features/: __init__.py  feature_builder.py
boa_contrast/ml/: __init__.py  contrast_recognition.py
boa_contrast/models/KM_in_GI_HistGradientBoostingClassifier_2class_2023-04-07/: model_KM_in_GI_HistGradientBoostingClassifier_2class_2023-04-07_0.pkl  model_KM_in_GI_HistGradientBoostingClassifier_2class_2023-04-07_1.pkl  model_KM_in_GI_HistGradientBoostingClassifier_2class_2023-04-07_2.pkl  model_KM_in_GI_HistGradientBoostingClassifier_2class_2023-04-07_3.pkl  model_KM_in_GI_HistGradientBoostingClassifier_2class_2023-04-07_4.pkl
boa_contrast/models/KM_in_GI_HistGradientBoostingClassifier_2class_2023-07-18/: features_KM_in_GI_HistGradientBoostingClassifier_2class_2023-07-18.pkl  model_KM_in_GI_HistGradientBoostingClassifier_2class_2023-07-18_0.pkl  model_KM_in_GI_HistGradientBoostingClassifier_2class_2023-07-18_1.pkl  model_KM_in_GI_HistGradientBoostingClassifier_2class_2023-07-18_2.pkl  model_KM_in_GI_HistGradientBoostingClassifier_2class_2023-07-18_3.pkl  model_KM_in_GI_HistGradientBoostingClassifier_2class_2023-07-18_4.pkl
boa_contrast/models/real_IV_class_HistGradientBoostingClassifier_5class_2023-04-07/: model_real_IV_class_HistGradientBoostingClassifier_5class_2023-04-07_0.pkl  model_real_IV_class_HistGradientBoostingClassifier_5class_2023-04-07_1.pkl  model_real_IV_class_HistGradientBoostingClassifier_5class_2023-04-07_2.pkl  model_real_IV_class_HistGradientBoostingClassifier_5class_2023-04-07_3.pkl  model_real_IV_class_HistGradientBoostingClassifier_5class_2023-04-07_4.pkl
boa_contrast/models/real_IV_class_HistGradientBoostingClassifier_5class_2023-07-20/: features_real_IV_class_HistGradientBoostingClassifier_5class_2023-07-20.pkl
boa_contrast/util/: constants.py  totalseg_body_regions.py
boa_contrast/utils/: constants.py  json_default.py  totalseg_body_regions.py
tests/: example_features.json  test.py  test_contrast.py
