[tool.poetry]
name = "boa-contrast"
version = "0.1.1"
description = ""
authors = ["Giulia Baldini <Giulia.Baldini@uk-essen.de>"]
readme = "README.md"
repository = "https://github.com/UMEssen/BOA-Contrast"
license = "MIT License"
keywords = ["python", "contrast", "intravenous", "git", "CT", "machine learning"]
include = [
    "LICENCE",
]
packages = [{include = "boa_contrast"}]

[tool.poetry.scripts]
contrast-recognition = "boa_contrast.cli:run"

[tool.poetry.dependencies]
python = "^3.8,<3.11" # The <3.11 is for scipy
scikit-learn = "^1.1.2"
opencv-python = "^4.5.5.64" # 4.5.5.64 definitely works
connected-components-3d = "^3.10.2"
scikit-image = "^0.19.3"
simpleitk = "^2.2.0"
totalsegmentator = { version = "1.5.5", optional = true }
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.14.0"
flake8 = "^3.9.2"
mypy = "^0.981"
black = "^22.3.0"

[tool.poetry.extras]
totalsegmentator = ["totalsegmentator"]

[tool.poetry.group.optional.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88
