[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling>=1.29" ]

[project]
name = "boa-contrast"
version = "0.2.0"
description = ""
readme = "README.md"
keywords = [
  "contrast",
  "CT",
  "gastrointestinal tract",
  "intravenous",
  "machine learning",
  "python",
]
license = "MIT"
authors = [
  { name = "Jannis Straus", email = "jannis.straus@uk-essen.de" },
]
requires-python = ">=3.11,<3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "connected-components-3d>=3.10.2,<4",
  "opencv-python>=4.5.5.64,<5",
  "pandas>=2,<3",
  "scikit-image>=0.23,<1",
  "scikit-learn>=1.8,<2",
  "simpleitk>=2.2,<3",
  "threadpoolctl>=3.1,<4",
]
optional-dependencies.totalsegmentator = [
  "totalsegmentator==1.5.5",
]
urls.Repository = "https://github.com/UMEssen/BOA-Contrast"
scripts.contrast-recognition = "boa_contrast.cli:run"

[dependency-groups]
dev = [
  "pre-commit>=4.4",
  "pytest>=9.0.1",
  "pytest-cov>=7",
]

[tool.hatch]
build.targets.sdist.include = [
  "boa_contrast",
  "README.md",
  "LICENCE",
]
build.targets.wheel.packages = [ "boa_contrast" ]

[tool.ruff]
target-version = "py312"
line-length = 88
lint.select = [
  "ARG",
  "B",
  "C",
  "D401",
  "E",
  "EXE",
  "F",
  "I",
  "N",
  "PERF",
  "PL",
  "PTH",
  "RUF",
  # "S",
  "SIM",
  "UP",
  "W",
]
lint.ignore = [
  "E501",
  "N813",
  "PLR",
]
lint.unfixable = [
  "F401",
]
lint.pydocstyle.convention = "google"

[tool.pytest]
ini_options.addopts = "--cov --cov-report=term-missing --cov-report=xml"
ini_options.testpaths = [ "tests" ]

[tool.coverage]
run.source = [ "boa_contrast" ]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true
