[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling>=1.29" ]

[project]
name = "boa-contrast"
version = "0.1.5"
description = ""
readme = "README.md"
keywords = [
  "contrast",
  "CT",
  "gastrointestinal tract",
  "intravenous",
  "machine learning",
  "python",
]
license = "MIT"
authors = [
  { name = "Jannis Straus", email = "jannis.straus@uk-essen.de" },
]
requires-python = ">=3.11,<3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "connected-components-3d>=3.10.2,<4",
  "numpy>=1.24,<2",
  "opencv-python>=4.5.5.64,<5",
  "pandas>=2,<3",
  "scikit-image>=0.23,<1",
  "scikit-learn>=1.1.2,<=1.5.0",
  "simpleitk>=2.2,<3",
  "threadpoolctl>=3.1,<4",
]
optional-dependencies.totalsegmentator = [
  "totalsegmentator==1.5.7",
]
urls.Repository = "https://github.com/UMEssen/BOA-Contrast"
scripts.contrast-recognition = "boa_contrast.cli:run"

[dependency-groups]
dev = [
  "pre-commit>=4.4",
  "pytest>=9.0.1",
  "pytest-cov>=7",
]

[tool.hatch]
build.targets.wheel.packages = [ "boa_contrast" ]

[tool.ruff]
target-version = "py312"
line-length = 88
lint.select = [
  "ARG",  # Unused arguments
  "B",    # flake8-bugbear
  "C",    # flake8-comprehensions
  "D401", # First line of docstring should be in imperative mood
  "E",    # pycodestyle errors
  "EXE",  # flake8-executable
  "F",    # pyflakes
  "I",    # isort
  "N",    # Naming conventions
  "PERF", # perflint
  "PL",   # pylint
  "PTH",  # pathlib usage
  "RUF",  # ruff
  "S",    # flake8-bandit (security)
  "SIM",  # flake8-simplify
  "UP",   # PyUpgrade
  "W",    # pycodestyle warnings
]
lint.ignore = [
  "E501", # line too long, handled by black
  "N813", # Camelcase imported as lowercase
  "PLR",  # pylint refactoring
]
lint.unfixable = [
  "F401",
]
lint.pydocstyle.convention = "google"

[tool.pytest]
ini_options.addopts = "--cov --cov-report=term-missing --cov-report=xml"
ini_options.testpaths = [ "tests" ]
ini_options.log_cli = true
ini_options.log_level = "INFO"


[tool.coverage]
run.omit = [
  "boa_contrast/cli.py", # Tested in "CLI smoke test" workflow
]
run.source = [ "boa_contrast" ]

[tool.mypy]
# Ensure full coverage
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# Restrict dynamic typing
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true
# Know exactly what you're doing
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true
